--- a/tp.html
+++ b/tp.html
@@ -16,6 +16,6 @@
   <hr>
   <iframe title="Apps en promedio semanal" aria-label="Donut Chart" id="datawrapper-chart-kUUCe" src="https://datawrapper.dwcdn.net/kUUCe/1/" scrolling="no" frameborder="0" style="border: none;" width="600" height="530"></iframe>
   <hr>
-  <iframe title="Apps distribuidas en categorias" aria-label="Donut Chart" id="datawrapper-chart-mzXZw" src="https://datawrapper.dwcdn.net/mzXZw/1/" scrolling="no" frameborder="0" style="width: 0; min-width: 100% !important; border: none;" height="300"></iframe><script type="text/javascript">!function(){"use strict";window.addEventListener("message",(function(e){if(void 0!==e.data["datawrapper-height"]){var t=document.querySelectorAll("iframe");for(var a in e.data["datawrapper-height"])for(var r=0;r<t.length;r++){if(t[r].contentWindow===e.source)t[r].style.height=e.data["datawrapper-height"][a]+"px"}}}))}();</script>
+ <iframe title="Apps distribuidas en categorias" aria-label="Donut Chart" id="datawrapper-chart-mzXZw" src="https://datawrapper.dwcdn.net/mzXZw/1/" scrolling="no" frameborder="0" style="border: none;" width="600" height="410"></iframe>
   </body>
 </html>
